<resources xmlns:tools="http://schemas.android.com/tools">

    <string-array name="events">
        <item>Event 1</item>
        <item>Event 2</item>
        <item>Event 3</item>
        <item>Event 4</item>
        <item>Event 5</item>
        <item>Event 6</item>
        <item>Event 7</item>
        <item>Event 8</item>
        <item>Event 9</item>
        <item>Event 10</item>
        <item>Event 11</item>
        <item>Event 12</item>
        <item>Event 13</item>
        <item>Event 14</item>
    </string-array>

    <string name="app_name">CalenSnap</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_label">Main Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="upload">Upload from gallery</string>
    <string name="previous">Previous</string>


    <!-- Ad IDs -->
    <string name="ad_id_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_id_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_id_reward">ca-app-pub-3940256099942544/5224354917</string>

    <string name="alert_dialog_title">Out of Scans</string>
    <string name="alert_dialog_message">Unfortunately you are out of scans for the day. Would you like to watch an ad to get an additional scan?</string>
    <string name="decline">Decline</string>
    <string name="watch_ad">Watch Ad</string>


    <string name="hello_first_fragment">Hello Team Hotel!</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="scan_button_text">Scan</string>
    <string name="tutorial_button_text">Tutorial</string>
    <string name="tutorial_button_message">This will lead to the tutorial</string>
    <string name="camera">Camera</string>
    <string name="upload_image">Upload Image</string>
    <string name="scan_again">scan again</string>
    <string name="found_this_event">The following event has been found. Please modify the values if necessary and press "add", then "continue".</string>
    <string name="found_multiple_event">Multiple events found. Please modify the events if necessary and press "add" on each, then "continue".</string>
    <string name="home">Home</string>
    <string name="success">Event Created Successfully!</string>
    <string name="continued">finish</string>
    <string name="submit">add</string>
    <string name="hello_blank_fragment">This page will contain: settings/buy premium/scan history. Buttons for those will be added in second term.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="continue_label">Continue</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Preference Titles -->
    <string name="account_header">Account</string>
    <string name="more_header">More</string>
    <!-- I think this might cause some issues in the future. -->
    <string name="preferences_address">com.example.ocrhotel_preferences</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Edit Details</string>
    <string name="privacy_title">Privacy</string>
    <string name="calendar_title">Default Calendar</string>


    <!-- Sync Preferences -->
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="scan">Scan</string>

    <string name="select_events_from_the_list_of_found">Select events from the list of found:</string>
    <string name="login" tools:ignore="ExtraTranslation">Login</string>
    <string name="password" tools:ignore="ExtraTranslation">Password</string>
    <string name="username" tools:ignore="ExtraTranslation">Username</string>

    <!--Contact Form-->
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>

    <string name="premium_button">Upgrade To Premium</string>
    <string name="a_white_circle_with_a_check_mark_in_the_middle">A white circle with a check mark in the middle</string>
    <string name="done">Done</string>
    <string name="title_activity_payment_popup_business">PaymentPopupBusiness</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="next">Next</string>
    <string name="delete">delete</string>
    <string name="deleteLastTitle">\"Attempting to delete the last event\"</string>
    <string name="deleteLastMessage">\"Deleting the last event will bring you back to the home page. Do you want to proceed?\"</string>
    <string name="deleteLastNo">\"Take me back\"</string>
    <string name="deleteLastYes">\"Delete anyway\"</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="event_modification">Event Modification</string>
    <string name="title">Title</string>
    <string name="_01_08_2020">01-08-2020</string>
    <string name="_16_00">16:00</string>

</resources>
