<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <PreferenceCategory
        android:layout_height="wrap_content"
        app:title="@string/account_header">


        <ListPreference
            app:key="d_calendar"
            app:title="@string/calendar_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:clickable="false"
            android:defaultValue="false"
            android:key="premium"
            android:title="Premium Account" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/privacy_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


</PreferenceScreen>