<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Spinner
        android:id="@+id/foundEventsSelector"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:background="@drawable/edit_button_shape"
        android:contentDescription="@string/select_events_from_the_list_of_found"
        app:layout_constraintBottom_toTopOf="@+id/eventTitleBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventTitleBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        app:errorEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/llDateContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foundEventsSelector">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button_shape"
            android:duplicateParentState="false"
            android:inputType="text"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="Title" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/success"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:text="Event Modification"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="38sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <Button
        android:id="@+id/submit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:layout_marginEnd="-32dp"
        android:background="@drawable/button_shape"
        android:text="@string/submit"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/delete"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="160dp"
        android:layout_height="61dp"
        android:layout_marginStart="-32dp"
        android:background="@drawable/button_shape"
        android:text="@string/delete"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/finish"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/continued"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintVertical_bias="0.109" />

    <LinearLayout
        android:id="@+id/llDateContainer"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/EventDate"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:background="@drawable/edit_button_shape"
            android:fontFamily="sans-serif-medium"
            android:text="01-08-2020"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/EventHour"
            android:layout_width="128dp"
            android:layout_height="55dp"
            android:background="@drawable/edit_button_shape"
            android:ems="4"
            android:minHeight="80dp"
            android:text="16:00"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submit" />


</androidx.constraintlayout.widget.ConstraintLayout>